[package]
name = "frontier-template-node"
version = "0.0.0"
authors = ["Substrate DevHub <https://github.com/substrate-developer-hub>"]
description = "A fresh FRAME-based Substrate node, ready for hacking."
edition = "2021"
license = "Unlicense"
build = "build.rs"
homepage = "https://substrate.io"
repository = "https://github.com/substrate-developer-hub/frontier-node-template/"
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
async-trait = "0.1"
clap = { version = "3.1", features = ["derive"] }
futures = "0.3"
jsonrpc-core = "18.0.0"
jsonrpc-pubsub = "18.0.0"
log = "0.4.8"

sc-basic-authorship = { git = "https://github.com/darwinia-network/substrate.git", branch = "darwinia-v0.12.4" }
sc-cli = { git = "https://github.com/darwinia-network/substrate.git", branch = "darwinia-v0.12.4", features = ["wasmtime"] }
sc-client-api = { git = "https://github.com/darwinia-network/substrate.git", branch = "darwinia-v0.12.4" }
sc-consensus = { git = "https://github.com/darwinia-network/substrate.git", branch = "darwinia-v0.12.4" }
sc-consensus-aura = { git = "https://github.com/darwinia-network/substrate.git", branch = "darwinia-v0.12.4" }
sc-consensus-manual-seal = { git = "https://github.com/darwinia-network/substrate.git", branch = "darwinia-v0.12.4" }
sc-executor = { git = "https://github.com/darwinia-network/substrate.git", branch = "darwinia-v0.12.4", features = ["wasmtime"] }
sc-finality-grandpa = { git = "https://github.com/darwinia-network/substrate.git", branch = "darwinia-v0.12.4" }
sc-keystore = { git = "https://github.com/darwinia-network/substrate.git", branch = "darwinia-v0.12.4" }
sc-network = { git = "https://github.com/darwinia-network/substrate.git", branch = "darwinia-v0.12.4" }
sc-rpc = { git = "https://github.com/darwinia-network/substrate.git", branch = "darwinia-v0.12.4" }
sc-rpc-api = { git = "https://github.com/darwinia-network/substrate.git", branch = "darwinia-v0.12.4" }
sc-service = { git = "https://github.com/darwinia-network/substrate.git", branch = "darwinia-v0.12.4", features = ["wasmtime"] }
sc-telemetry = { git = "https://github.com/darwinia-network/substrate.git", branch = "darwinia-v0.12.4" }
sc-transaction-pool = { git = "https://github.com/darwinia-network/substrate.git", branch = "darwinia-v0.12.4" }
sc-transaction-pool-api = { git = "https://github.com/darwinia-network/substrate.git", branch = "darwinia-v0.12.4" }
sp-api = { git = "https://github.com/darwinia-network/substrate.git", branch = "darwinia-v0.12.4" }
sp-block-builder = { git = "https://github.com/darwinia-network/substrate.git", branch = "darwinia-v0.12.4" }
sp-blockchain = { git = "https://github.com/darwinia-network/substrate.git", branch = "darwinia-v0.12.4" }
sp-consensus = { git = "https://github.com/darwinia-network/substrate.git", branch = "darwinia-v0.12.4" }
sp-consensus-aura = { git = "https://github.com/darwinia-network/substrate.git", branch = "darwinia-v0.12.4" }
sp-core = { git = "https://github.com/darwinia-network/substrate.git", branch = "darwinia-v0.12.4" }
sp-finality-grandpa = { git = "https://github.com/darwinia-network/substrate.git", branch = "darwinia-v0.12.4" }
sp-inherents = { git = "https://github.com/darwinia-network/substrate.git", branch = "darwinia-v0.12.4" }
sp-runtime = { git = "https://github.com/darwinia-network/substrate.git", branch = "darwinia-v0.12.4" }
sp-timestamp = { git = "https://github.com/darwinia-network/substrate.git", branch = "darwinia-v0.12.4" }
# These dependencies are used for RPC
pallet-transaction-payment-rpc = { git = "https://github.com/darwinia-network/substrate.git", branch = "darwinia-v0.12.4" }
substrate-frame-rpc-system = { git = "https://github.com/darwinia-network/substrate.git", branch = "darwinia-v0.12.4" }
# These dependencies are used for runtime benchmarking
frame-benchmarking = { git = "https://github.com/darwinia-network/substrate.git", branch = "darwinia-v0.12.4" }
frame-benchmarking-cli = { git = "https://github.com/darwinia-network/substrate.git", branch = "darwinia-v0.12.4" }

fc-consensus = { path = "../../client/consensus" }
fc-db = { path = "../../client/db" }
fc-mapping-sync = { path = "../../client/mapping-sync" }
fc-rpc = { path = "../../client/rpc" }
fc-rpc-core = { path = "../../client/rpc-core" }
fp-consensus = { path = "../../primitives/consensus" }
fp-dynamic-fee = { path = "../../primitives/dynamic-fee" }
fp-evm = { path = "../../primitives/evm" }
fp-rpc = { path = "../../primitives/rpc" }
fp-storage = { path = "../../primitives/storage" }

frontier-template-runtime = { path = "../runtime", default-features = false, features = ["std"] }

[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/darwinia-network/substrate.git", branch = "darwinia-v0.12.4" }

[features]
default = ["aura"]
aura = ["frontier-template-runtime/aura"]
manual-seal = ["frontier-template-runtime/manual-seal"]
rpc_binary_search_estimate = ["fc-rpc/rpc_binary_search_estimate"]
runtime-benchmarks = [
	"frontier-template-runtime/runtime-benchmarks",
]
