[package]
name = "pallet-evm-precompile-bls12377"
version = "1.0.0-dev"
authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }

[dependencies]
ark-std = { version = "0.4.0", default-features = false }
ark-bls12-377 = { version = "0.4.0", default-features = false, features = ["curve"] }
ark-ec = { version = "0.4.2", default-features = false }
ark-ff = { version = "0.4.2", default-features = false }
num-bigint = { version = "0.4.3", default-features = false }

# Frontier
fp-evm = { workspace = true }

[features]
default = ["std"]
std = ["ark-std/std", "ark-bls12-377/std", "fp-evm/std", "ark-ec/std", "ark-ff/std", "num-bigint/std"]
