[package]
authors     = ["Parity Technologies <admin@parity.io>", "Drew Stone <drew@webb.tools>"]
description = "Curve25519 elliptic curve precompiles for EVM pallet."
edition     = "2018"
homepage    = "https://substrate.io"
license     = "Apache-2.0"
name        = "pallet-evm-precompile-curve25519"
repository  = "https://github.com/paritytech/frontier/"
version     = "1.0.0-dev"

[dependencies]
codec         = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
fp-evm        = { version = "3.0.0-dev", default-features = false, path = "../../../../primitives/evm" }
frame-support = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.2" }
sp-core       = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.2" }
sp-io         = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.2" }

	[dependencies.curve25519-dalek]
	default-features = false
	features         = ["u64_backend", "alloc"]
	version          = "4.0.0-dev"

[features]
default = ["std"]
std = [
	"sp-core/std",
	"sp-io/std",
	"frame-support/std",
	"fp-evm/std",
	"codec/std",
]
