[package]
authors     = ["Parity Technologies <admin@parity.io>"]
description = "DISPATCH precompiles for EVM pallet."
edition     = "2018"
homepage    = "https://substrate.io"
license     = "Apache-2.0"
name        = "pallet-evm-precompile-dispatch"
repository  = "https://github.com/paritytech/frontier/"
version     = "2.0.0-dev"

[dependencies]
codec         = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
fp-evm        = { version = "3.0.0-dev", default-features = false, path = "../../../../primitives/evm" }
frame-support = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.3" }
pallet-evm    = { version = "6.0.0-dev", default-features = false, path = "../.." }
sp-core       = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.3" }
sp-io         = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.3" }

[features]
default = ["std"]
std = [
	"sp-core/std",
	"sp-io/std",
	"frame-support/std",
	"pallet-evm/std",
	"fp-evm/std",
	"codec/std",
]
