[package]
authors     = ["Parity Technologies <admin@parity.io>"]
description = "ED25519 precompiles for EVM pallet."
edition     = "2018"
homepage    = "https://substrate.io"
license     = "Apache-2.0"
name        = "pallet-evm-precompile-ed25519"
repository  = "https://github.com/paritytech/frontier/"
version     = "2.0.0-dev"

[dependencies]
ed25519-dalek = { version = "1.0.0", features = ["alloc", "u64_backend"], default-features = false }
fp-evm        = { version = "3.0.0-dev", default-features = false, path = "../../../../primitives/evm" }
sp-core       = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.2" }
sp-io         = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.2" }

[features]
default = ["std"]
std = [
	"sp-core/std",
	"sp-io/std",
	"fp-evm/std",
	"ed25519-dalek/std",
]
