[package]
authors     = ["Parity Technologies <admin@parity.io>", "Drew Stone <drew@commonwealth.im>"]
description = "SHA3 FIPS202 precompile for EVM pallet."
edition     = "2018"
homepage    = "https://substrate.io"
license     = "Apache-2.0"
name        = "pallet-evm-precompile-sha3fips"
repository  = "https://github.com/paritytech/frontier/"
version     = "2.0.0-dev"

[dependencies]
fp-evm      = { version = "3.0.0-dev", default-features = false, path = "../../../../primitives/evm" }
sp-core     = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.2" }
sp-io       = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.2" }
tiny-keccak = { version = "2.0", features = ["fips202"] }

[features]
default = ["std"]
std = [
	"sp-core/std",
	"sp-io/std",
	"fp-evm/std",
]
