[package]
authors     = ["Parity Technologies <admin@parity.io>"]
description = "Simple precompiles for EVM pallet."
edition     = "2018"
homepage    = "https://substrate.io"
license     = "Apache-2.0"
name        = "pallet-evm-precompile-simple"
repository  = "https://github.com/paritytech/frontier/"
version     = "2.0.0-dev"

[dependencies]
fp-evm    = { version = "3.0.0-dev", default-features = false, path = "../../../../primitives/evm" }
ripemd160 = { version = "0.9", default-features = false }
sp-core   = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.2" }
sp-io     = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.2" }

[dev-dependencies]
pallet-evm-test-vector-support = { version = "1.0.0-dev", path = "../../test-vector-support" }

[features]
default = ["std"]
std = [
	"sp-core/std",
	"sp-io/std",
	"fp-evm/std",
	"ripemd160/std",
]
